--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,8 +27,10 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.android.support:appcompat-v7:23.2.0'
+    compile 'com.android.support:appcompat-v7:23.2.1'
+    compile 'com.github.clans:fab:1.5.0'
     compile 'com.facebook.android:facebook-android-sdk:4.+'
-    compile 'com.android.support:design:23.2.0'
+    compile 'com.android.support:design:23.2.1'
     compile 'de.hdodenhof:circleimageview:1.3.0'
+    compile 'com.google.android.gms:play-services:8.4.0'
 }
