--- a/local.properties
+++ b/local.properties
@@ -8,5 +8,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Thu Mar 31 23:31:42 PDT 2016
-ndk.dir=/Users/caoyi/Library/Android/sdk/ndk-bundle
-sdk.dir=/Users/caoyi/Library/Android/sdk
+sdk.dir=/usr/local/Cellar/android-sdk/24.4.1
