--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,12 +10,20 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
     }
 }
 repositories {
@@ -33,4 +41,6 @@ dependencies {
     compile 'com.android.support:design:23.2.1'
     compile 'de.hdodenhof:circleimageview:1.3.0'
     compile 'com.google.android.gms:play-services:8.4.0'
+    compile 'com.android.support:multidex:1.0.0'
+    compile 'com.yelp.clientlib:yelp-android:1.0.0'
 }
