--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Apr 03 22:42:48 PDT 2016
-sdk.dir=/Users/danyang/Library/Android/sdk
+#Tue Apr 05 01:18:20 PDT 2016
+ndk.dir=/Users/caoyi/Library/Android/sdk/ndk-bundle
+sdk.dir=/Users/caoyi/Library/Android/sdk
