--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,11 +28,12 @@ android {
 }
 repositories {
     mavenCentral()
+
 }
 
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:appcompat-v7:23.2.1'
@@ -43,4 +44,7 @@ dependencies {
     compile 'com.google.android.gms:play-services:8.4.0'
     compile 'com.android.support:multidex:1.0.0'
     compile 'com.yelp.clientlib:yelp-android:1.0.0'
+    compile 'com.android.volley:volley:1.0.0'
+    compile files('lib/android-wunderground-client-1.0-SNAPSHOT.jar')
+    compile files('lib/restrung-1.0-SNAPSHOT.jar')
 }
