--- a/TouristGuide-Server/conf/application.conf
+++ b/TouristGuide-Server/conf/application.conf
@@ -342,7 +342,7 @@ db {
   default.driver=com.mysql.jdbc.Driver
   default.url="jdbc:mysql://localhost:3306/SSNetwork"
   default.user=root
-  default.password="Since1992!"
+  default.password="root"
   default.hikaricp.connectionTestQuery="SELECT 1 FROM DUAL"
 //  default.driver="org.postgresql.Driver"
 //  default.url="jdbc:postgresql://localhost:3306/dblp" #the port is optional
