--- a/client/app/src/main/AndroidManifest.xml
+++ b/client/app/src/main/AndroidManifest.xml
@@ -54,7 +54,7 @@
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
 
-        <activity android:name=".ui.activity.Login">
+        <activity android:name=".ui.activity.ProfileActivity">
             <meta-data android:name="android.app.searchable"
                 android:resource="@xml/searchable"/>
         </activity>
