--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -27,17 +27,20 @@ android {
         exclude 'META-INF/LICENSE'
         exclude 'META-INF/LICENSE.txt'
         exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/maven/com.google.guava/guava/pom.xml'
+        exclude 'META-INF/maven/com.google.guava/guava/pom.properties'
     }
 }
 repositories {
-    mavenCentral()
+    jcenter()
 
 }
 
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.github.clans:fab:1.5.0'
@@ -45,9 +48,10 @@ dependencies {
     compile 'com.android.support:design:23.2.1'
     compile 'de.hdodenhof:circleimageview:1.3.0'
     compile 'com.google.android.gms:play-services:8.4.0'
-    compile 'com.android.support:multidex:1.0.0'
     compile 'com.yelp.clientlib:yelp-android:1.0.0'
     compile 'com.android.volley:volley:1.0.0'
+    compile 'org.roboguice:roboguice:3.+'
+    provided 'org.roboguice:roboblender:3.+'
     compile files('lib/android-wunderground-client-1.0-SNAPSHOT.jar')
     compile files('lib/restrung-1.0-SNAPSHOT.jar')
 }
