--- a/client/app/src/main/AndroidManifest.xml
+++ b/client/app/src/main/AndroidManifest.xml
@@ -66,6 +66,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".database.AndroidDatabaseManager"
+            android:theme="@style/Theme.AppCompat.Light"/>
 
         <activity android:name=".ui.activity.DetailActivity"></activity>
 
