--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -62,5 +62,7 @@ dependencies {
     compile ('com.github.ozodrukh:CircularReveal:1.3.1@aar') {
         transitive = true;
     }
+    compile 'com.uber.sdk:rides-android:0.3.1'
+
 
 }
