--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     compile 'com.google.android.gms:play-services:8.4.0'
     compile 'com.yelp.clientlib:yelp-android:1.0.0'
     compile 'com.android.volley:volley:1.0.0'
+    compile 'com.google.maps:google-maps-services:0.1.7'
     compile 'org.roboguice:roboguice:3.+'
     provided 'org.roboguice:roboblender:3.+'
     compile files('lib/android-wunderground-client-1.0-SNAPSHOT.jar')
