--- a/client/app/src/main/AndroidManifest.xml
+++ b/client/app/src/main/AndroidManifest.xml
@@ -75,11 +75,9 @@
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
-
-        <provider
+        <provider android:authorities="com.facebook.app.FacebookContentProvider1535706426732193"
             android:name="com.facebook.FacebookContentProvider"
-            android:authorities="com.facebook.app.FacebookContentProvider"
-            android:exported="true" />
+            android:exported="true"/>
         <service android:name=".service.local.SearchService" ></service>
     </application>
 
