--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -65,6 +65,11 @@ dependencies {
         transitive = true;
     }
     compile 'com.uber.sdk:rides-android:0.3.1'
+    // Unit testing dependencies
+    testCompile 'junit:junit:4.12'
+    // Set this dependency if you want to use the Hamcrest matcher library
+    testCompile 'org.hamcrest:hamcrest-library:1.3'
+    // more stuff, e.g., Mockito
 
 
 }
